--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -14,11 +14,14 @@
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "moment": "^2.29.4",
+    "pusher-js": "^8.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-quill": "^2.0.0",
-    "react-redux": "^8.1.1"
+    "react-redux": "^8.1.1",
+    "react-webcam": "^7.1.1",
+    "simple-peer": "^9.11.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
