--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -21,7 +21,8 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.1",
     "react-webcam": "^7.1.1",
-    "simple-peer": "^9.11.1"
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
