--- a/Back-End/composer.json
+++ b/Back-End/composer.json
@@ -11,6 +11,7 @@
         "laravel/passport": "^v11.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "pusher/pusher-php-server": "^7.2",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
