--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.10.1",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.1",
+    "react-top-loading-bar": "^2.3.1",
     "react-webcam": "^7.1.1",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.2"
