real-time video chating added
### Needs more work but for now it is functional

--- a/Front-End/.env.development
+++ b/Front-End/.env.development
@@ -4,3 +4,4 @@ VITE_BACKEND_URL=http://localhost:8000
 VITE_PUSHER_APP_KEY=781a0aa0e408805f0244
 VITE_CLUSTER=mt1
 VITE_INSTANCEID=1d32e604-c56c-4b0a-abda-e73a8d18b72d
+VITE_APP_URL=http://localhost:5173
