--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
-version: '3.8'
 services:
-  Back-End:
+  back-end:
     container_name: Back-End
     build: ./Back-End
     volumes:
@@ -8,25 +7,10 @@ services:
     ports:
       - 5000:80
 
-  mysql_db:
-    image: mysql:latest
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: db_docker
-    ports:
-    - 3306:3306
-
-  phpmyadmin:
-    image: phpmyadmin:latest
-    ports:
-      - 9001:80
-    environment:
-      - PMA_ARBITRARY=1
-
-  Front-End:
+  front-end:
     build: ./Front-End
     ports:
-      - "3000:3000"
+      - "5173:5173"
     volumes:
       - ./Front-End:/usr/src/app
       - /usr/src/app/node_modules
