--- a/Back-End/Dockerfile
+++ b/Back-End/Dockerfile
@@ -49,7 +49,7 @@ RUN chown -R www-data:www-data /var/www/html \
     && chmod -R 775 /var/www/html/storage \
     && chmod -R 775 /var/www/html/bootstrap/cache
 
-RUN php artisan migrate:fresh --seed
+RUN php artisan migrate --seed
 
 # Expose port 80 and start Apache
 EXPOSE 80
