--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@pusher/push-notifications-web": "^1.1.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@uiw/react-md-editor": "^4.0.4",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "moment": "^2.29.4",
@@ -19,10 +20,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-quill": "^0.0.2",
     "react-redux": "^8.1.1",
     "react-top-loading-bar": "^2.3.1",
     "react-webcam": "^7.1.1",
+    "rehype-sanitize": "^6.0.0",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.2"
   },
