--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -15,6 +15,7 @@
     "@uiw/react-md-editor": "^4.0.4",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "dotenv": "^16.4.7",
     "moment": "^2.29.4",
     "pusher-js": "^8.3.0",
     "react": "^18.2.0",
