--- a/Back-End/composer.json
+++ b/Back-End/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "pusher/pusher-php-server": "^7.2",
+        "spawnia/sailor": "^1.1",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
