--- a/Back-End/Dockerfile
+++ b/Back-End/Dockerfile
@@ -1,12 +1,12 @@
-FROM php:8.2-apache
+FROM php:8.4-apache
 
 WORKDIR /var/www/html
 
-# Mod Rewrite
+# Enable Apache mod_rewrite
 RUN a2enmod rewrite
 
-# Linux Library
-RUN apt-get update -y && apt-get install -y \
+# Install dependencies
+RUN apt-get update && apt-get install -y \
     git \
     libicu-dev \
     unzip zip \
@@ -14,43 +14,31 @@ RUN apt-get update -y && apt-get install -y \
     libpng-dev \
     libjpeg-dev \
     libfreetype6-dev \
-    libjpeg62-turbo-dev \
-    libpng-dev
+ && rm -rf /var/lib/apt/lists/*
+
+# PHP Extensions
+RUN docker-php-ext-install gettext intl pdo_mysql gd
+
+RUN docker-php-ext-configure gd --with-freetype --with-jpeg \
+    && docker-php-ext-install -j$(nproc) gd
+
+# Copy app files
+COPY . /var/www/html
 
 # Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
-
-# PHP Extension
-RUN docker-php-ext-install gettext intl pdo_mysql gd
-
-RUN docker-php-ext-configure gd --enable-gd --with-freetype --with-jpeg \
-    && docker-php-ext-install -j$(nproc) gd
-
-# Set a default ServerName to suppress Apache warnings
-RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
-
-# Copy Laravel application files
-COPY . /var/www/html
-
 ENV COMPOSER_ALLOW_SUPERUSER=1
+RUN composer install --no-scripts --no-autoloader && \
+    composer dump-autoload --optimize
 
-RUN composer update
-
-# Install Composer dependencies
-RUN composer install --no-scripts --no-autoloader
-
-# Generate optimized autoload files
-RUN composer dump-autoload --no-scripts --optimize
-
+# Apache Document Root to /public
 RUN sed -i 's|/var/www/html|/var/www/html/public|g' /etc/apache2/sites-available/000-default.conf
 
-# Fix permissions
+# Permissions
 RUN chown -R www-data:www-data /var/www/html \
     && chmod -R 775 /var/www/html/storage \
     && chmod -R 775 /var/www/html/bootstrap/cache
 
-RUN php artisan migrate:fresh --seed --force
-
-# Expose port 80 and start Apache
+# Expose Apache
 EXPOSE 80
 CMD ["apache2-foreground"]
